--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@distube/ytdl-core",
+  "name": "@abrucci/ytdl-core",
   "description": "DisTube fork of ytdl-core. YouTube video downloader in pure javascript.",
   "keywords": [
     "youtube",
@@ -10,7 +10,7 @@
   "version": "4.14.4",
   "repository": {
     "type": "git",
-    "url": "git://github.com/distubejs/ytdl-core.git"
+    "url": "git://github.com/abruccii/ytdl-core.git"
   },
   "author": "Skick (https://github.com/skick1234)",
   "contributors": [
