--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,9 +1,5 @@
 name: Publish @abrucci/ytdl-core
-on:  
-  workflow_dispatch:
-  push:
-    tags:
-      - '*'
+on:  workflow_dispatch
 jobs:
   publish:
     name: Build & Publish
@@ -14,25 +10,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: latest
-
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: "pnpm"
+          node-version: 23
           registry-url: "https://registry.npmjs.org"
-
-      - name: Install dependencies
-        run: pnpm install --ignore-scripts --frozen-lockfile
 
       - name: Publish
         run: |
           pnpm publish --access public --no-git-checks
-          pnpm deprecate @abrucci/ytdl-core@"< ${{ github.ref_name }}" "This version is deprecated, please upgrade to the latest version."
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
           NPM_CONFIG_PROVENANCE: true
