--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,5 @@
 name: Publish @abrucci/ytdl-core
-on:  
-  push:
-    tags:
-      - '*'
+on:  workflow_dispatch
 jobs:
   publish:
     name: Build & Publish
@@ -31,7 +28,6 @@ jobs:
       - name: Publish
         run: |
           pnpm publish --access public --no-git-checks
-          pnpm deprecate @abrucci/ytdl-core@"< ${{ github.ref_name }}" "This version is deprecated, please upgrade to the latest version."
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
           NPM_CONFIG_PROVENANCE: true
